--- a/src/br/unisc/pickglobe/view/IncluirSite.form
+++ b/src/br/unisc/pickglobe/view/IncluirSite.form
@@ -38,7 +38,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jScrollPane2" min="-2" pref="250" max="-2" attributes="0"/>
+                      <Component id="jScrollPane2" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -56,9 +56,9 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="lblShowInterval" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jSlider1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jSlider1" alignment="0" pref="376" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="21" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
