--- a/src/br/unisc/pickglobe/view/EditarLista.form
+++ b/src/br/unisc/pickglobe/view/EditarLista.form
@@ -13,7 +13,7 @@
     <Property name="title" type="java.lang.String" value="Editar lista"/>
     <Property name="alwaysOnTop" type="boolean" value="true"/>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-      <Color id="Cursor Padr&#xe3;o"/>
+      <Color id="Default Cursor"/>
     </Property>
     <Property name="locationByPlatform" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="false"/>
